# citizen_db

./: .gitignore  README.md  autogen_readme.md  datasets_config.yml  gemini_project_description.md  mermaid.md  pyproject.toml  review_gemini.md  review_gpt.md
arch_notes/: 2025-07-09-1239.md  2025-07-10-1143_ingest_refactoring.md
architecture/app/: ARCH-pipeline-orchestration-v1.md  ARCH-pipeline-step-ingest-v1.md  ARCH-pipeline-step-load-stage-v1.md  ARCH-pipeline-step-publish-citizen-datamart-v1.md  ARCH-pipeline-step-publish-v1.md  ARCH-pipeline-step-transform-v1.md  ARCH-pipeline-step-transform-v2.md  ARCH-pipeline-step-validate-v1.md  ARCH-pipeline-utilities-v1.md
architecture/data/: ARCH-data-contract-pandera-v1.md  ARCH-data-contract-yaml-v1.md  (+5 more)
contracts/: av_bait.yml  breath_troubles.yml  citizen_contact.yml  citizens.yml  hamal.yml  hazramim.yml  meser.yml  new_immigrants.yml  welfare_patients.yml
datatypes_check/: check_datatypes.ipynb
experiments/: test_linter.py
poetry/: install-poetry.py
schemas/: av_bait_schema.py  breath_troubles_schema.py  citizens_schema.py  hamal_schema.py  hazramim_schema.py  meser_schema.py  new_immigrants.py  new_immigrants_schema.py  welfare_hazramim_schema.py  welfare_patients.py  welfare_patients_schema.py
sql/: fast_drop_fake_ids_table.sql  metadata_tables_up_combined.sql
src/: backfill_citizen_fid.py  create_db_from_env.py  ingest.py  load_stage.py  publish.py  run_ddl_scripts.py  run_pipeline.py  transform.py  validate.py
tests/: file_parser_tests.py  test_config_env.py  test_source_file_validator.py
(+112 files in other folders)
